--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   #Future-based API for HTTP requests
   http: ^0.13.4
   flutter_rating_bar: ^4.0.0
+  shared_preferences: ^2.0.12
 
 dev_dependencies:
   flutter_test:
